Fixed MAGE-6169: Changes to Multiple Wishlist feature design after the second demo - Checkboxes aligned - Text overflow with ellipsis script added (to limit description)

--- a/skin/frontend/enterprise/default/css/styles-ie.css
+++ b/skin/frontend/enterprise/default/css/styles-ie.css
@@ -67,7 +67,7 @@
 #nav li a { zoom:1; }
 #nav li { vertical-align:top; }
 /********** < Navigation styles */
-
+.split-button { display:inline; zoom:1; }
 .please-wait { filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=80); margin-top:-100px; }
 
 .form-list .control .input-box { padding-top:2px; }
